# python-packages

./: .gitignore
ham-dicom/: pyproject.toml
ham-dicom/src/ham_dicom/: __init__.py  dicom_converter.py  ham_dicom_handler.py
ham-dicom/tests/: test_import.py
ham-logger/: .coverage  pyproject.toml
ham-logger/src/ham_logger/: __init__.py  logger.py
ham-logger/tests/: test_import.py  test_logger.py
ham-orm/: Makefile  example.py  pyproject.toml  requirements-test.txt  setup.cfg
ham-orm/src/ham_orm/: __init__.py  app_base_model.py  collection.py  db.py  descriptors.py  model.py  query_builder.py  relationship.py  serializer.py  tx.py  utils.py
ham-orm/tests/: test_app_base_model.py  test_error_handling.py  test_import.py  test_integration.py  test_query_builder.py  test_smoke.py
