[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ham-logger"
version = "0.1.1"
description = "A tiny console + daily-file logger with sane defaults"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  { name = "Your Name" }
]
keywords = ["logging", "logger", "python-logging"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://example.com/ham-logger"
Repository = "https://example.com/ham-logger.git"

[tool.setuptools]
package-dir = {}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ham_logger*"]
exclude = ["tests*"]