[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ham-orm"
version = "0.1.0"
description = "Lightweight SQLAlchemy query-builder and model wrapper"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Mehran Pourshahmir" }]
dependencies = [
    "sqlalchemy>=2.0.43"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "pytest-mock>=3.10.0",
]

[project.urls]
Homepage = "https://hamresan.com/"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ham_orm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings", 
    "--verbose",
    "-ra"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow running tests"
]